Update linkedin site yml

--- a/_site.yml
+++ b/_site.yml
@@ -9,12 +9,12 @@ navbar:
       href: plotly.html
     - text: "Dashboard"
       href: Rest_Dashboard.html
+    - text: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/aisara-chansakul-400398109/
     - icon: fa-envelope fa-lg
       href: mailto:<ac4635.cumc.columbia.edu>
-    - text: "Linkedin"
-      href: https://www.linkedin.com/in/aisara-chansakul-400398109/
     - icon: fa-github fa-lg
-      href: http://github.com/ac4635/
+      href: https://github.com/achansak94
 output:
   html_document:
     theme: sandstone
