--- a/_site.yml
+++ b/_site.yml
@@ -9,7 +9,7 @@ navbar:
       href: plotly.html
     - text: "Dashboard"
       href: Rest_Dashboard.html
-    - text: fa-linkedin fa-lg
+    - icon: fa-linkedin fa-lg
       href: https://www.linkedin.com/in/aisara-chansakul-400398109/
     - icon: fa-envelope fa-lg
       href: mailto:<ac4635.cumc.columbia.edu>
